force-app/main/default/objects/Customer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows users to click on a lookup icon to select a value from a popup list. The other object is the source of the values in the list.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>