force-app/main/default/objects/Customer__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Capture Company Name</description>
    <inlineHelpText>Enter Company Name</inlineHelpText>
    <label>Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>