force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Capture email address</description>
    <inlineHelpText>Email Address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>