force-app/main/default/objects/Customer__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <description>Allows users to enter Job Title</description>
    <inlineHelpText>Enter Job Title</inlineHelpText>
    <label>Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>