force-app/main/default/objects/Customer__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Allows users to enter any phone numbe</description>
    <inlineHelpText>Enter Any Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>