force-app/main/default/objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>JobTitle__c</columns>
    <columns>PhoneNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>